feat: add feed generation script, product recommendation component, and content normalization utility
- Implemented a script to generate an RSS feed from markdown posts in the content directory.
- Created a ProductRecommendation component for displaying product details with dynamic call-to-action based on the URL.
- Added a normalizeContent utility to standardize specific phrases in text content.

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,38 @@
 *.userosscache
 *.sln.docstates
 *.env
+.env
+.env.*
+.env.local
+.env.development
+.env.test
+.env.production
+.env.staging
+.env.prod
+.env.dev
+.envrc
+.direnv/
+.secrets/
+secrets/
+secret/
+secret.*
+secrets.*
+*.pem
+*.key
+*.p12
+*.pfx
+*.jks
+*.keystore
+*.csr
+*.der
+id_rsa
+id_rsa.pub
+id_ed25519
+id_ed25519.pub
+credentials.json
+credentials.*
+service-account.json
+service-account.*
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
