feat: update sitemap with new last modified dates for all pages
docs: add 6-month content checklist to growth roadmap

docs: refine monetization roadmap for affiliate links and sponsored content

docs: enhance quick start guide with affiliate link requirements

fix: update index.html to streamline head tags and improve performance

chore: modify netlify.toml for enhanced content security policy

chore: add Playwright as a dev dependency for testing

build: update build script to include SSR and prerendering steps

feat: implement category filter component with customizable className

feat: enhance cookie consent component to manage analytics and ads loading

feat: update footer component to include contact information and social links

feat: improve SEO component to dynamically manage head tags

feat: add site configuration for contact email and social links

feat: implement server-side rendering entry point for improved performance

feat: create head context for managing head tags in SSR

test: add Playwright tests for homepage and blog index visibility

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,12 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+
 # User-specific files
 *.rsuser
 *.suo
@@ -453,6 +459,15 @@ FodyWeavers.xsd
 tsconfig.tsbuildinfo
 *.log
 !*.log.md
+/dist/
+/dist-ssr/
 
 # Personal reference docs
 docs/blog-income-expectations.md
+
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/playwright/.auth/
