Enhance SEO and routing for blog categories and tags; implement slugify utility
- Updated SEO components to ensure canonical paths end with a trailing slash.
- Added CategoryArchive and TagArchive pages to handle category and tag routes.
- Introduced slugify utility for consistent URL slugs.
- Modified blog index and post components to link to category and tag archives.
- Improved sitemap generation to include category and tag routes.
- Ensured proper handling of 404 pages and non-existent categories/tags.
- Updated .gitignore to exclude IDE configurations and local artifacts.

--- a/.gitignore
+++ b/.gitignore
@@ -441,6 +441,11 @@ FodyWeavers.xsd
 !.vscode/launch.json
 !.vscode/extensions.json
 !.vscode/*.code-snippets
+*.code-workspace
+
+# IDE configs
+.idea/
+*.iml
 
 # Local History for Visual Studio Code
 .history/
@@ -457,10 +462,21 @@ FodyWeavers.xsd
 
 # Build artifacts
 tsconfig.tsbuildinfo
+*.tsbuildinfo
 *.log
 !*.log.md
 /dist/
 /dist-ssr/
+
+# Netlify/Vercel local artifacts
+.netlify/
+.vercel/
+
+# Tool caches
+.vite/
+.cache/
+.eslintcache
+coverage/
 
 # VS Code workspace settings (optional - can be tracked if you want shared settings)
 .vs/
